EXPORTERS = 			\
	burn_disc		\
	contact_sheet		\
	facebook		\
	flicker			\
	photobucket		\
	picasaweb		\
	webalbums		\
	$(NULL)
	
IMPORTERS = 			\
	photo_importer		\
	$(NULL)

IMAGE_VIEWER_TOOLS = 		\
	desktop_background	\
	file_tools		\
	red_eye_removal		\
	$(NULL)

JPEG_TOOLS = 			\
	image_rotation		\
	$(NULL)

SUBDIRS = 			\
	bookmarks		\
	catalogs		\
	change_date		\
	comments		\
	convert_format		\
	edit_metadata		\
	exiv2_tools		\
	export_tools		\
	$(EXPORTERS)		\
	find_duplicates		\
	file_manager		\
	file_viewer		\
	find_duplicates		\
	gstreamer_utils		\
	gstreamer_tools		\
	image_print		\
	image_viewer		\
	importer		\	
	jpeg_utils		\
	$(JPEG_TOOLS)		\
	list_tools		\
	oauth			\
	pixbuf_savers		\
	raw_files		\
	rename_series 		\
	resize_images		\
	search			\
	slideshow		\
	$(IMAGE_VIEWER_TOOLS)	\
	$(IMPORTERS)		\
	$(NULL)

EXTRA_DIST = example

-include $(top_srcdir)/git.mk
