EXPORTERS = 			\
	export_tools		\
	burn_disc		\
	contact_sheet		\
	facebook		\
	flicker			\
	photobucket		\
	picasaweb		\
	webalbums		\
	$(NULL)
	
IMPORTERS = 			\
	photo_importer		\
	$(NULL)

JPEG_TOOLS = 			\
	image_rotation		\
	importer		\
	$(NULL)

OTHER_TOOLS = 			\
	desktop_background	\
	file_tools		\
	find_duplicates		\
	red_eye_removal		\
	$(NULL)

SUBDIRS = 			\
	bookmarks		\
	catalogs		\
	change_date		\
	comments		\
	convert_format		\
	edit_metadata		\
	exiv2_tools		\
	file_manager		\
	file_viewer		\
	gstreamer_utils		\
	gstreamer_tools		\
	image_print		\
	image_viewer		\
	jpeg_utils		\
	$(JPEG_TOOLS)		\
	list_tools		\
	oauth			\
	pixbuf_savers		\
	raw_files		\
	rename_series 		\
	resize_images		\
	search			\
	slideshow		\
	$(EXPORTERS)		\
	$(IMPORTERS)		\
	$(OTHER_TOOLS)		\
	$(NULL)

EXTRA_DIST = example

-include $(top_srcdir)/git.mk
