include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gthumb
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = 	figures/comment.png \
		figures/main-win.png \
		figures/nav-button.png \
		figures/preferences.png

DOC_LINGUAS = de el es fr oc sv zh_CN

EXTRA_DIST = theme-xml.txt

-include $(top_srcdir)/git.mk
