include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = gthumb
DOC_INCLUDES = legal.xml

DOC_FIGURES = \
 	figures/comment.png \
	figures/main-win.png \
	figures/nav-button.png \
	figures/preferences.png \
	figures/palette.png \
	figures/thumbnail-pane.png

DOC_PAGES = \
	index.page \
	attributes.page \
	strftime.page \
	introduction.page \
	browser.page \
	batch-rotate.page \
	batch-convert-format.page \
	batch-resize.page \
	batch-change-date.page \
	batch-scripts.page \
	thumbnails.page \
	thumbnail-pane.page \
	rename-series.page \
	edit-save-undo-redo.page \
	edit-colors.page \
	edit-rotate.page \
	edit-resize-crop.page \
	edit-redeye.page
	
DOC_LINGUAS = de el es fr oc sl sv zh_CN

EXTRA_DIST = album-theme-format.txt

-include $(top_srcdir)/git.mk
